# distributed_price_aggregate

./: Cargo.toml  README.md  cache  docker-compose.yml  kill-all-deps.sh  run-a.sh  run-all-worker-nodes.sh  run-b.sh  run-c.sh  run-d.sh  run-e.sh
master_n/: .env  Cargo.toml  Dockerfile  cache  docker-compose.yml  local-run-deps.sh
master_n/src/: client.rs  lib.rs  main.rs  server.rs
master_n/src/config/: kafka_config.rs  mod.rs
master_n/src/config/models/: agg_price_message.rs
master_n/src/controller/: mod.rs
master_n/src/models/: agg_ticker_prices.rs  cache_details.rs
master_n/src/models/enums/: server_state.rs
master_n/src/service/: agg_market_data_price.rs  mod.rs  validate_service.rs  worker_service.rs
master_node/: .env  Cargo.toml  README.md  local-run-deps.sh
master_node/src/: main.rs  server.rs
master_node/src/config/: kafka_config.rs  message_topics.rs
master_node/src/config/models/: mod.rs  task_queue_message.rs
master_node/src/models/enums/: mod.rs
master_node/src/service/: worker_service.rs  ws_client.rs
simple_client/: Cargo.toml  cache
simple_client/src/: error.rs  lib.rs
simple_client/src/models/: agg_ticker_prices.rs  agg_trade_data.rs  cache_details.rs  mod.rs  price_ticker.rs
simple_client/src/service/: aggregate_result.rs
src/: error.rs  lib.rs  main.rs
src/models/: agg_ticker_prices.rs  cache_details.rs  mod.rs  price_ticker.rs
src/models/enums/: ticker_symbol.rs
src/repository/: file_repository.rs  mod.rs
src/service/: aggregate_result.rs  mod.rs  ws_client.rs
worker_a/: .env  Cargo.toml  Dockerfile  README.md  local-run-deps.sh
worker_a/src/: consumer.rs  lib.rs  main.rs  server.rs
worker_a/src/config/: kafka_config.rs  mod.rs
worker_a/src/models/: price_ticker.rs
worker_a/src/repository/: file_repository.rs
worker_a/src/service/: worker_service.rs  ws_client.rs
worker_b/: .env  Cargo.toml  Dockerfile
worker_b/src/: main.rs
worker_b/src/config/: kafka_config.rs
worker_c/: .env  Cargo.toml  Dockerfile  docker-compose.yml
worker_c/src/: main.rs
worker_c/src/config/: kafka_config.rs
worker_c/src/service/: mod.rs
worker_d/: .env  Cargo.toml  Dockerfile
worker_d/src/: main.rs
worker_d/src/config/: kafka_config.rs
worker_d/src/repository/: mod.rs
worker_e/: .env  Cargo.toml  Dockerfile
worker_e/src/: error.rs  main.rs
worker_e/src/config/: kafka_config.rs  message_topics.rs
(+6 files in other folders)
