[package]
name = "simple_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive",  "cargo"] }
serde_json = "1.0.93"
serde = "1.0.152"
serde_derive = "1.0.194"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.56"
anyhow = "1.0.79"
lazy_static = "1.4.0"
env_logger = "0.10.1"
dotenv = "0.15.0"
async-trait = "0.1.77"
actix-web = { version = "4.4", features = ["rustls-0_21"] }
actix-cors = "0.7.0"
once_cell = "1.19.0"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }



[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
