[package]
name = "worker_e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive",  "cargo"] }
serde_json = "1.0.93"
serde = "1.0.152"
serde_derive = "1.0.194"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.56"
anyhow = "1.0.79"
lazy_static = "1.4.0"
env_logger = "0.10.1"
dotenv = "0.15.0"
async-trait = "0.1.77"
actix-web = { version = "4.4", features = ["rustls-0_21"] }
actix-cors = "0.7.0"
once_cell = "1.19.0"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
binance_spot_connector_rust = {version = "1.1.0", features = ["full"]}
futures-util = {version = "0.3.21" }
hyper = { version = "1.1.0", features = ["full"], optional = true }

# Apache Kafka  
rdkafka = { version = "0.36.1", features = ["cmake-build"] }


# enable-tokio-tungstenite
# tokio-tungstenite = {version = "0.21.0", features = ["native-tls"], optional = true}

# Used for integration tests
log = "0.4.17"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.2"
serde_with = "3.4.0"
serde-this-or-that = "0.4.2"
tokio-stream = "0.1.14"
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"], optional = true}
tungstenite = "0.21.0"
parking_lot = "0.12.1"
futures = "0.3.30"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
